# azure-agent-ops-copilot

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  sync-to-hub.yml
data/: configs.json  logs.json
data/templates/: sql_scale.sh  vm_resize.bicep
scripts/: generate_configs.py  generate_logs.py
src/backend/: app.py
src/backend/agent/: azure_agent.py
src/backend/services/: mcp_client.py
src/frontend/: app.py
src/mcp/: main.py  server.py  utils.py
src/mcp/tests/: test_mcp.py
src/mcp/tools/: integrations.py
