[project]
name = "azure-agent-ops-copilot"
version = "0.1.0"
description = "A copilot for Azure AgentOps"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
backend = [
    "agent-framework>=1.0.0b251120",
    "azure-ai-inference>=1.0.0b9",
    "fastapi[standard]>=0.121.3",
    "semantic-kernel>=1.38.0",
]
frontend = [
    "gradio>=5.50.0",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "types-requests>=2.32.4.20250913",
]
mcp = [
    "fastmcp>=2.13.1",
]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.5.0",
    "ruff>=0.14.6",
]
